添加了忘记密码功能，修改了二维码地址

--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -170,6 +170,9 @@
 .m_margin_left_small {
     margin-left: 2em !important;
 }
+.m_margin_left_mini {
+    margin-left: 1.5em !important;
+}
 
 .m_margin_left_big {
     margin-left: 8em !important;
