--- a/src/main/resources/templates/adminHtml/addBlog.html
+++ b/src/main/resources/templates/adminHtml/addBlog.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="field">
                     <button type="button" class="ui button"
-                            onclick="window.location.href='/admin/blogs'">博客管理
+                            onclick="window.location.href='/blog/admin/blogs'">博客管理
                     </button>
                 </div>
             </div>
