--- a/src/main/resources/templates/adminHtml/tags.html
+++ b/src/main/resources/templates/adminHtml/tags.html
@@ -57,7 +57,7 @@
                             </div>
                             <input type="text" style="width: 230px;float:right" name="name"
                                    placeholder="标签名称">
-                            <button class="ui submit  blue basic button m_margin_right_min right floated">新增</button>
+                            <button class="ui submit violet basic button m_margin_right_min right floated">新增</button>
                             <br><br>
                             <div class="ui error message"></div>
                         </div>
