--- a/src/main/resources/templates/adminHtml/types.html
+++ b/src/main/resources/templates/adminHtml/types.html
@@ -52,7 +52,7 @@
                             </div>
                             <input id="inp" type="text" style="width: 230px;float:right" name="name"
                                    placeholder="分类名称">
-                            <button class="ui submit blue basic button m_margin_right_min right floated">新增</button>
+                            <button class="ui submit violet basic button m_margin_right_min right floated">新增</button>
                             <br><br>
                             <div class="ui error message"></div>
                         </div>
@@ -78,7 +78,7 @@
     </div>
 </div>
 <!--底部-->
-<br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m_opacity_mini m_padded_tb_big">
 </footer>
 <!--/*/<th:block th:replace="_fragments :: script">/*/-->
@@ -100,7 +100,6 @@
         }else{
             upAccount();
         }
-
         $("#input").blur(function () {
 
             $.ajax({
@@ -181,6 +180,7 @@
         ;
     }
 </script>
+
 </body>
 </html>
 
