--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -40,13 +40,13 @@
                             <!--横列表-->
                             <div class="ui mini horizontal link list">
 
-                                <div class="item">
-                                    <!--插入图片-->
+                                <div style="cursor: pointer" class="item">
                                     <img th:src="@{${blog.user.avatar}}" alt="图片走丢了QWQ。"
                                          class="ui avatar image">
                                     <!--作者名-->
-                                    <div class="content"><a href="#" th:text="${blog.user.nickname}" class=" header">一叶知秋</a>
-                                    </div>
+                                    <span class="ui mini basic m_t_color_name  label m_padded_mini">博主</span>
+                                    <span style="font-weight: bold;color: black"
+                                          th:text="${blog.user.nickname}">一叶知秋</span>
                                 </div>
                                 <div class=" c item">
                                     <i class="calendar alternate outline icon"></i><span
@@ -95,7 +95,7 @@
 
 <div th:replace="_fragments :: tools"></div>
 <!--底部-->
-<br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m_opacity_mini m_padded_tb_big">
 </footer>
 <!--/*/<th:block th:replace="_fragments :: script">/*/-->
@@ -147,7 +147,7 @@
     });
     /*生成二维码*/
     var qrcode = new QRCode("qrcode", {
-        text: "http://www.runoob.com",
+        text: "http://qzjblog.cn/blog/search",
         width: 90,
         height: 90,
         colorDark: "#BA55D3",
