--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -20,7 +20,7 @@
                 </div>
                 <!--篇数字样-->
                 <div class="right aligned column">
-                    共 <h3 th:text="${tags.size()} " class="ui orange header m_inline_block">10</h3> 个
+                    共 <h3 th:text="${page.getTotal()}" class="ui orange header m_inline_block">10</h3> 个
                 </div>
             </div>
         </div>
@@ -49,13 +49,13 @@
                                 <!--横列表-->
                                 <div class="ui mini horizontal link list">
 
-                                    <div class="item">
+                                    <div style="cursor: pointer" class="item">
                                         <!--插入图片-->
                                         <img th:src="@{${blog.user.avatar}}" alt="图片走丢了QWQ。"
                                              class="ui avatar image">
                                         <!--作者名-->
                                         <span class="ui mini basic m_t_color_name  label m_padded_mini">博主</span>
-                                        <span th:text="${blog.user.nickname}">一叶知秋</span>
+                                        <span style="font-weight: bold;color: black" th:text="${blog.user.nickname}">一叶知秋</span>
                                     </div>
                                     <div class="item">
                                         <i class="calendar alternate outline icon"></i><span
@@ -164,7 +164,7 @@
 
     /*生成二维码*/
     var qrcode = new QRCode("qrcode", {
-        text: "http://qzjblog.cn/blog/tags",
+        text: "http://qzjblog.cn/blog/tags/-1",
         width: 90,
         height: 90,
         colorDark: "#BA55D3",
